fix(SwipeableCards): add `z-index` to prevent stacking issues during drag gestures

--- a/components/SwipeableCards/SwipeableCards.module.scss
+++ b/components/SwipeableCards/SwipeableCards.module.scss
@@ -3,6 +3,7 @@
   place-content: center;
   position: relative;
   touch-action: none;
+  z-index: 1;
 
   .card {
     grid-area: 1 / 1;
